# gstreamer_ex

./: CMakeLists.txt  config.h  gstmyfilter.c  gstmyfilter.h  main.c  test.c  tuto7.c  tuto9.c
